RESOLVED FIXED219609
Ensure that DisplayListSharedMemoryHeader is never explicitly created or destroyed at compile-time
https://bugs.webkit.org/show_bug.cgi?id=219609
Summary Ensure that DisplayListSharedMemoryHeader is never explicitly created or dest...
Wenson Hsieh
Reported 2020-12-07 12:19:13 PST
Some minor cleanup I noticed while working on https://bugs.webkit.org/show_bug.cgi?id=219586.
Attachments
Patch (1.53 KB, patch)
2020-12-07 12:21 PST, Wenson Hsieh
no flags
Wenson Hsieh
Comment 1 2020-12-07 12:21:34 PST
EWS
Comment 2 2020-12-07 13:13:02 PST
Committed r270520: <https://trac.webkit.org/changeset/270520> All reviewed patches have been landed. Closing bug and clearing flags on attachment 415572 [details].
Radar WebKit Bug Importer
Comment 3 2020-12-07 13:14:16 PST
Note You need to log in before you can comment on or make changes to this bug.