Ensure that DisplayListSharedMemoryHeader is never explicitly created or destroyed at compile-time https://bugs.webkit.org/show_bug.cgi?id=219609

Reviewed by Tim Horton.

Make sure that a `DisplayListSharedMemoryHeader` is never created or destroyed by marking the constructor and
destructor as deleted. A `DisplayListSharedMemoryHeader` should only ever be `reinterpret_cast`-ed from the
first few bytes of a shared display list handle.

* Shared/SharedDisplayListHandle.h:


Canonical link: https://commits.webkit.org/232196@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@270520 268f45cc-cd09-0410-ab3c-d52691b4dbfc